src/notebook/styles/main.css
/*
  App
 */
#app {
  padding-top: 20px;
}

/*
  Globals
 */

pre
{
    font-size: 14px;
    line-height: 1.21429em;

    word-wrap: break-word;
}

body
{
    font-family: 'Source Sans Pro';
    font-size: 16px;
    line-height: 22px;

    color: rgb(51,51,51);
}

/* By default the notebook centers all images. */
img
{
    display: block;

    margin-right: auto;
    margin-left: auto;
}

/*
    Codemirror
 */

.CodeMirror
{
    font-family: 'Source Code Pro';
    font-size: 14px;
    line-height: 20px;

    height: auto;

    background: none;
}

.CodeMirror-scroll
{
    overflow-x: auto;
    overflow-y: hidden;
}

.CodeMirror-lines
{
    padding: .4em;
}

.CodeMirror-linenumber
{
    padding: 0 8px 0 4px;
}

.CodeMirror-gutters
{
    border-top-left-radius: 2px;
    border-bottom-left-radius: 2px;
}

.CodeMirror pre
{
    padding: 0;

    border: 0;
    border-radius: 0;
}

/*
  Cell
 */

.draggable-cell
{
    padding: 10px;
}

.cell
{
    position: relative;

    transition: all .1s ease-in-out;
}

.cell:hover
{
    box-shadow: 1px 1px 3px rgba(0,0,0,.12), -1px -1px 3px rgba(0,0,0,.12);
}

.cell.focused {
    box-shadow: 3px 3px 9px rgba(0,0,0,.12), -3px -3px 9px rgba(0,0,0,.12);
}

.cell:hover .input_area .cell_inputs,
.cell:active .input_area .cell_inputs,
.cell:focus .input_area .cell_inputs,
.cell.focused .input_area .cell_inputs
{
    background-color: #e2dfe3;
}

.cell_toolbar-mask
{
    position: absolute;
    top: -37px;
    right: -5px;
    z-index: 99;
    height: 32px;

    /* Set the left padding to 50px to give users extra room to move their
    mouse to the toolbar without causing the cell to go out of focus and thus
    hide the toolbar before they get there. */
    padding: 5px 5px 0px 50px;
}

.cell_toolbar
{
    display: inline-box;
    background: white;
    box-shadow: 0 1px 2px 0 rgba(0,0,0,.50);
}

.cell_toolbar button
{
    display: inline-block;

    width: 22px;
    height: 20px;
    padding: 2px 4px;

    text-align: center;

    border: none;
    outline: none;
    background: none;
}

.cell_toolbar button i
{
    font-size: 16px;
    line-height: 1;

    color: #aaa;
}

.cell_toolbar button i:hover
{
    color: #555;
}

.cell_markdown
{
    padding: 10px 50px 10px 50px;
}

.cell_display
{
    padding: 10px 10px 10px 60px;
}

.cell_display:empty
{
    display:none;
}

.code_cell .input_area
{
    display: flex;
    flex-direction: row;
}

.code_cell .input_area .cell_inputs
{
    font-family: monospace;
    font-size: 12px;

    width: 50px;
    padding: 9px 0;

    text-align: center;

    color: #8c8a8e;
    background-color: #fafafa;

    flex: 0 0 auto;
}

.code_cell .input_area .cell_editor
{
    flex: 1 1 auto;
}

.creator-hover-mask {
  display: block;
  position: relative;
  overflow: visible;
  height: 0px;
}

.creator-hover-region {
  display: flex;
  position: relative;
  overflow: visible;
  top: -30px;
  height: 60px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

.creator-tool {
  display: inline-block;
  background: white;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,.50);
  margin-top: -15px;
  pointer-events: all;
}

.creator-tool button
{
  display: inline-block;

  width: 22px;
  height: 20px;
  padding: 2px 4px;

  text-align: center;

  border: none;
  outline: none;
  background: none;
}

.creator-tool button i
{
  /* These icons are thin, use a larger font than the cell toolbar */
  font-size: 17px;
  line-height: 1;

  color: #aaa;
}

.creator-tool button i:hover
{
  color: #555;
}

.creator-tool .creator-label {
  color: #aaa;
  font-size: 12px;
  text-transform: uppercase;
  padding: 5px;
  vertical-align: text-bottom;
  font-weight: bold;
}

code {
  font-family: 'Source Code Pro';
  white-space: pre;
  font-size: 14px;
}

/* Tables! */

th,
td {
    padding: 0.5em 1em;
    border: 1px solid #cbcbcb;
}

